--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= FSL Community BSP
+= FSL Community BSP by KOAN
 
 To get the BSP you need to have `repo` installed and use it as:
 
@@ -15,7 +15,7 @@ Download the BSP source:
 $: PATH=${PATH}:~/bin
 $: mkdir fsl-community-bsp
 $: cd fsl-community-bsp
-$: repo init -u https://github.com/Freescale/fsl-community-bsp-platform -b master
+$: repo init -u https://github.com/koansoftware/freescale-bsp-platform -b thud
 $: repo sync
 
 At the end of the commands you have every metadata you need to start work with.
